z-index FIX

--- a/src/Map.css
+++ b/src/Map.css
@@ -1,6 +1,6 @@
 .map-container {
   position: absolute;
-  top: 100px;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
@@ -10,7 +10,7 @@
   display: inline-block;
   position: absolute;
   top: 0;
-  left: 1000;
+  left: 1000px;
   margin: 12px;
   background-color: #404040;
   color: #ffffff;
@@ -18,7 +18,18 @@
   padding: 6px;
   font-weight: bold;
 }
-
+.sidebarStyle2 {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 12px;
+  background-color: #404040;
+  color: #ffffff;
+  z-index: 1 !important;
+  padding: 6px;
+  font-weight: bold;
+}
 #map {
   position: absolute;
   top: 0;
